--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./components/footer";
 @import "./components/header";
 @import "./components/formulario";
+@import "./components/table";
 
 @import "./pages/index";
 @import "./pages/404";
