--- a/scss/components/_table.scss
+++ b/scss/components/_table.scss
@@ -1,23 +1,47 @@
-table {
-    display: grid;
-    width: 50%;
-    max-width: 700px;
-    border: 1px solid #000;
-    gap: 0;
+table{
+    display: flex;
+    flex-direction: column;
     tr {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
-        border-bottom: 1px solid #000;
-        th{
-   
-        }
-        td {
-            border-right: 1px solid #000;
+        box-sizing: border-box;
+        border: 1px solid #000;
+        border-top: none;
+        th, td{
             padding: 1rem;
-            width: 100%;
-
+            width: 100%;        
         }
-      
+        th {
+            background-color: #00317a;
+            color:#fff;
+        }
+        &:first-child{
+            border: 1px solid #000;
+        }
+     
+        &:nth-child(4n)
+        {
+            margin-bottom: $margin;
+        }
+        &:last-child{
+            border-top: none;
+            
+          }
+    }
+    
+}
+
+@media(min-width:768px){
+    table {
+        display: grid;
+        width: 50%;
+        max-width: 700px;
+        gap: 0;
+        tr {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
     }
 }
