--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -59,6 +59,21 @@ textarea {
     }
 }
 
+.btn {
+    text-transform: uppercase;
+    border: 0;
+    border-radius: 500px;
+    padding: 10px;
+    outline: 0!important;
+    background-color: #0a4595;
+    color: #fff;
+    cursor: pointer;
+    &:hover{
+        transition: background-color 1s ease;
+        background-color: #333;
+    }
+}
+
 
 @mixin flex-column {
     display: flex;
