--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -2,9 +2,12 @@
     @include flex-column;
     gap: 1rem;
 
-    &:nth-child(3n){
+
+    &:nth-child(3n), &:last-child{
         align-items: center;
+       
     }
+
     h1 {
         padding: 1rem;
         text-align: center;
@@ -45,8 +48,6 @@
             max-width: 700px;
             width: 70%;
             margin:  0 auto;
-
-
         }
 
     }
